<resources>
    <string name="new_printer">اتصال به پرینتر</string>
    <string name="print">پرینت کردن</string>
    <string name="switch_on_printer">مطمئن شوید چاپگر روشن است. اگر اتصال برقرار نیست ، لطفاً چاپگر را خاموش کرده و دوباره روشن کنید.</string>
    <string name="connecting">اتصال به چاپگر از طریق بلوتوث</string>
    <string name="non_paired_printers1">هیچ چاپگر متصلی وجود ندارد</string>
    <string name="non_paired_printers2">لطفاً چاپگر را روشن کرده و با زدن دکمه آن را به تلفن خود متصل کنید.  چاپگرهای Bixolon رمزشان 0000 است.</string>
    <string name="printer_ready1">چاپگر آماده است</string>
    <string name="printer_ready2">برای شروع چاپ روی دکمه " پرینت کردن " ضربه بزنید</string>
    <string name="app_name"> اصلی </string>
    <string name="app_img_name">asli_good</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_photo">/9j/4AAQSkZJRgABAAEAYABgAAD//gAfTEVBRCBUZWNobm9sb2dpZXMgSW5jLiBWMS4wMQD/2wCEAAUFBQgFCAwHBwwMCQkJDA0MDAwMDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0BBQgICgcKDAcHDA0MCgwNDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDf/EAaIAAAEFAQEBAQEBAAAAAAAAAAABAgMEBQYHCAkKCwEAAwEBAQEBAQEBAQAAAAAAAAECAwQFBgcICQoLEAACAQMDAgQDBQUEBAAAAX0BAgMABBEFEiExQQYTUWEHInEUMoGRoQgjQrHBFVLR8CQzYnKCCQoWFxgZGiUmJygpKjQ1Njc4OTpDREVGR0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoOEhYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4eLj5OXm5+jp6vHy8/T19vf4+foRAAIBAgQEAwQHBQQEAAECdwABAgMRBAUhMQYSQVEHYXETIjKBCBRCkaGxwQkjM1LwFWJy0QoWJDThJfEXGBkaJicoKSo1Njc4OTpDREVGR0hJSlNUVVZXWFlaY2RlZmdoaWpzdHV2d3h5eoKDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXGx8jJytLT1NXW19jZ2uLj5OXm5+jp6vLz9PX29/j5+v/AABEIAQ0A9AMBEQACEQEDEQH/2gAMAwEAAhEDEQA/APqigAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKAHKpc4AyaAJ/sr+1AEZgcdvy5oAjKleCMUAJQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFAGjbrtXPc0AYF/4hEDmO3UMVOCzZ259ABjOPXIFAFOLxPIP9bGp/3SV/Q7v50AaMXiS2fh1dPwBH6HP6UAXo9Qsp/uun4/L/ADxQBaEEbjKnj2OR/WgCM2p7GgCM27j3+h/xxQBGUZeoIoAZQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQBfuJPs0DP/AHEJ/ED/ABoA8tzQA5EaQhEBZj0AGT+QoAklt5YP9Yjp/vKR/MCgCGgB6StEcoxU+oJH8qANCLWLuHpIxH+1hv5gmgDRi8TTr/rERx7ZU/1H6UAaUXieFv8AWI6fTDD/ANlP6UAX49Ysp+N6g/7YI/U4FAFxVhnGUIb3U5/kaAA2o7HFAEL2zLyORQBXoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKAEDorqrEAkjjv+VAEevXOy0dRxvKqPzBP6A0AefZoA9A8LWqpbmcgb5GIB/wBlcDH03Zz60AdTigClNpttP/rIkJ9doB/MYP60AZU3hmzk+4Hj/wB1s/8AoW6gDLm8InrFKD7Mv9QT/KgDLm8NXsX3VWTH91h/Jtp/SgDLmsbi3/1kbr7lTj8+n60AVM0AKrFTkHBHccUAaNvq91bEFZGYD+FiWB9sHJA+nNAHoFheLfQrMvGeCPQjqP8AD2oAjuF2vx3GaAK9ABQAUAFABQAUAFABQAUAFABQAUAFABQBUmvYoeM7j6Dn/wCtQBlzahJJwvyD26/n/wDqoAk0tS8+48lQTn9P60AHiWXCRxjuS35AAf8AoRoA5LNAHrOkQ+RZwr0+QN+LfMf50AaVABQAUAFABQAUAVZ7GC5z5saPnuVGfz6j8DQB5rrdgum3JiT7jKHXPUAkjH4EHHfHWgDIzQB6D4ajKWm7++7MPwwv81oAu3By59qAIaACgAoAKACgAoAKACgAoAKACgBGYIMk4HvxQBnTakicRjcfXoP8T/nmgDLlu5JuGOB6Dgf5+uaAK9ABQBu6KnDv7gD+Z/pQBh+Ipd1zs/uIB+Jyf5EUAYkSGV1jHV2Cj8TigD2pVCAKOgGB+FAC0AFABQAUAFABQAUAeXeJJvNvnA6IFUfgMn8iTQBhZoA9U0yLyLWJOmEBP1I3H9SaAIGO4k+poAbQAUAFABQAUAFABQAUAFABQBl3d+YmMceMjqfQ+woAyJJWlOXJP+fTpQAygAoAKACgDqdLTZAD/eJP9P5CgDg9Tl866lb/AGyPwX5R/KgC1oEXn30S9g27/vgFv5gUAetUAFABQAUAFABQAUAFAHi15P8AaJ5Jf77sw+hJx+lAEcEfnSJGOrsq/mQP60AevSHYhxxgYFAGXQAUAFABQAUAFABQAUAFABQAUAc3exmOVs9zuH4//X4oAq0AFABQAUAFAHYA/ZYMn/lmmT/wFef5UAeVlyxyepoA67wdDvuZJeyR4/FiP6KfzoA9HoAKACgAoAKACgAoApalN9mtpZehWNiPrg4/XFAHi2aANnw/F519GOyksf8AgIJH64oA9KuThMepoAz6ACgAoAKACgAoAKACgAoAKACgDN1GHcgcdU6/Q/4UAYdABQAUAFAE1unmSKvqw/z+VAG7rkvk2ch7sAo/4EQD+maAPM80AekeC4dtvJL/AH5Av4KAf5saAOwZggySAB3PAFAHKah4tt7VtkA88g8kHCgd8H+I46Y+X3oA6mKVZkWRDlXAYH1BGRQBJQAUARyypApeRgijqWIAH4mgDlb/AMX29vlbYGdvX7qD8cZP4DB7GgCjqGpTXOjGafAa4k2qFGAFDZwOp/gPJz160AcDmgDr/B8W6eSX+4gX/vo5/kv60AdndHkLQBUoAKACgAoAKACgAoAKACgAoAKAEZQw2noeKAOWljMTlD2P+f0oAjoAKACgDR0pN04P90E/pj+tADfFc2yCOP8AvuT+Cgj/ANmoA4PNAHpdpqKaDpUDMpd5QSqjjJYlsk9gAQMgE9OO9AHHajrVzqZxK2I+yLwv492Puc+1AGRQB6P4P1HzYms3PzRfMnuh6j/gJP5MAOlAHT3mo29gu64dU9AeWP0UZY/gKAONv/GZOUs0x/tvz+Sg/qSfpQBx13fT3zbrh2c9sngfQDAH4AUAVKAOx8Tf6JaWln0KpuYe4Cj+ZagDjM0AejeEIdlq8h6vIfyUAD9SaANq4OXPtxQBDQAUAFABQAUAFABQAUAFABQAUAFAGPqcPSUfQ/0/woAyaACgAoA3dFT77/QD+Z/pQBzfiybdcJEOiJn8WJ/oBQBy2aAPRvEelXVwkEdsnmRQR7cgjOeB0zk8KvT1oA4ae1mtjiZHj/3lK/zFAEFAE9vcyWr+ZCxRwCMjg4Iwf8/j1oAjeRpGLOSzHqSSSfqTyaAGUAFAF7TLf7VdRRdmkXP0BBb9BQBq+MJ/Mvyn/PJEX8Tl/wD2YflQBy2aAPX9Bh8iwhX1Td/32S/9aAFY7iT6k0ANoAKACgAoAKACgAoAKACgAoAKACgCOaMSoUPcf/qP50AcsVKkg9Rx+VACUAFAHUaUmyAH+8Sf1x/SgDzrXZ/OvpT2Vtv/AHwAv9KAMjNAHZ6Z4xls41hnTzlQAKwO1go6Z4IbHQdD6mgDo4fGdhMNsoePPXcoYf8AjpJP5UATZ0PUu8BJ9/Kb/wBkagCCbwdaSjdC7x56ch1/IjP/AI9QBi3Hgy5TmGRJAPXKH8vmH/j1AGLcaFfW334XIHdRvH/jucfjQBlMpQ7WBBHUEYP5UAdP4Rg8293npEjN+Jwg/wDQj+VAHPaxcfaL2aTsZGx9AcL+gFAFCNTIwRerEAfiQKAPcdogi2joqhR+AwKAM2gAoAKACgAoAKACgAoAKACgAoAKACgAoAwtRh2PvHR/5j/63NAGdQAUAdpbp5UaL6KAfy5oA8ZmkLuzN1ZiT9SeaAIs0AGaADNABmgCeG6ltzmF3jP+yxX+RFAGzb+KNRt+BMXA7OA36kbv1oA2rfx1cJ/roo3/AN0sh/XeP5UAai+MNOuxtuomH+8qyL/j/wCO0ARy+IdK01HfTlzNIMYVWVQRnBbcAAAT0UHJ49wAebFsnJ60Aa+gQ/aL+FPRw3/fA3f0oA9duThMep/+vQBn0AFABQAUAFABQAUAFABQAUAFABQAUAFAFa7h86MgdRyPqP8AHpQBzVABQB2VtOLiMOvPHI9D3FAHIax4XeeQz2hHznLRk456kqemCeoPTt6UActNo17b/fhfA7qN4/NNwoAzWVkOGBBHYgg/rQA3NAC5oAM0AGaADNABmgAzQAZoA7DwXDvu3lPSOM/mxAH6bqAPQro9FoAqUAFABQAUAFABQAUAFABQAUAFABQAUAFABQBzl7D5Mpx0bkf1/KgCpQBLFO8BzGSD+n4jpQBoxarPnG0P+Bz+n+FAGzBcM4/eJs/HJ/LAxQBaYW8o2yKrD0dQf5gigDPm8Pabc/8ALJAf9glMfgpA/MUAZE/gm1f/AFMkkZ98OB+in9aAMafwTcp/qZI5APXKH/2YfrQBjT+G9Qt/vQswHdMP+ikn9KAMiWGSA7ZVZD6MpU/rigCLNABQAUAel+CLcpbyzkY8xwoPqEB/qxH1HNAHTXBy59uKAIKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAp3tsbhPl+8vI/woAxRaSk7dp/Hgfn0oA0IdMxzKfwH+P+FAGlHEkQwgC/T/AB60ASUAFABQA4Oy9CR+NAEouHX3oAkF16igB5njkG1xkHqCMj8qAM+bR9Ouvvwx5P8AdGw/mu05oAyp/BdlJzE0kR7YYMPyYZ/8eoAqQ+BolfMszOg/hChSfxLN+PA9jQB2cMMdnEI4wEjQYAH+eSe57nk80AUGO4k+poAbQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFACglenFAEgmde5/n/OgBrOz/eOaAGUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAIzBAWYgADJJ4AA7k0Ac7eeJra3ysWZmH93hf8Avo/zUMD60BsaumXbX1uk7AKX3cDoMMQP0H50bCL1AwoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAoAKACgAyM470AFABQBxni6WRRFGMiNtxPoSMYz9M5/Gl1H0/ry/r/AIYm0vQLGaJZixuMj12qD6bRyCO4LH6VW2wjqYokgURxgIq9ABgD/P8AOkBn6rqiaXGHI3O3CLnGcdSfQDv74HfIBnJ/2tq8x3xo4U8gLDlfzKsf/HqBHTaVqjXmYrhDDOgyVIIDDpkA8jB4IPsQTzhgbVIAoAKAOY8S/amjRbdX2KdzsnUEfd4HzYHJJ6Zx0xS2YzS0Xzzao1yxZ25GeoU/dBPUnHOTzzjtVPQk1QQRkcg0hhQBSfUbeOYWzSASnGF56noCcYBPYEgnjA5FG+wPTcu0AcXqWrvZakNp/doqo654IPzE49Ru4+mOhIoX4DfT+v60O0BzyKNtBEC3MbStAD+8QBiPQHp/TPpketAE9ABQAUAFABQAUAFABQBn2tw11LIyn9xGfLX/AGnH32z1wv3R2PJ9KAfY0KAOWvb2WDVYUwQhUJjswc8n8CB+K+hoQPZG/e3S2cLSswXapIz3ODgAdyT2HWkNHLXuoTiwgkjcMSy+awYFgfvBTjpyOfTAHQ4NbNCOnvbKG+j8ucZUHIPQg+x7envSBHBvMdGu3Ni3mQrtLDO5cHHysRxwTgN1BOCc5BE7D9DudP1KHUU3RH5h95D95fqPT0I4P14oEc54nElvLBdpg7DgZGQGB3DI9/6fSjZj6F+z8S2s0e6c+S46ggkH3UgHI9uo9+tAitceK4lO23jaQ9Msdo9sD5ifodtAHUx7to343YG7HTPfHXjNN6bAPpAUb+5a3QLHzLKQkY/2j/Ef9lRljx2x3o30DYuICqgMdxAGT0yfXA4GaAK1/I0VvI6AllRiMdc4PP4dfw45pMaMvw3O09mA3JjYoPoMEfkDiqJ8jYuZvs8Ty9dis2PoCanYpanm0mnyS2p1ISB2LEuo+8pLYyTnrnBxgcEHJp7C3PRLW6V0iDECSWMOB3PClvy3D/OafUOl/l9xkeJbFJ7YzgASQ857lc4IPtzkemDjqanYfkbNg262iY9TGh/8dFUSjnRA9rrKtklbhWPPbCn5foCox7Y9KS6ob7/12OsoAKACgAoAKACgAoAqX85treSUcFEYj644/XFJjW/9dCpoTI1lFsOcLg+zZO7P48/Qg96p+Xl/wfxJNakM5PxREs4hiTBnZ8KuQCQRg9cADcFxk+vvS6j6fP8A4f8AQ5+Pw3fOwBQID3Lpgf8AfJY/kDTEPm8MXsRwgWUeqsB+e/b+maAGJ4bvmOCgQepdcf8AjpY/pQB12laGljEyS4kaUYf+7j+6O+O+eD9MUeQHPX/heaJs2n7xD0UkKy/iSAR75z7d6AKC+HL8nBjA9y6f0Y0AaMHhKdv9bIiD/ZBY/wDso/U0Abtn4btrRlkJaR1II3HABHIIAA/IkintsB0FIAoA52a5X+1o4nOAkR2ZPG9/T3KjHvTXW/y/D/gg+h0VIBCQoJPAHXPTFAGD4e2eTL5X3PtEm3024XGPbFHRA93bb/hzZuIRcRvEeA6lSfTIxn8KQ1oeW3+lT6af3wXaThSGB3Y7hc7sepI449RTA6TU9JuL2C2aBdxSJVZchSPlXn5iB7etHUS2+8xP+Edv/wDnl/4/H/8AF0AH/CO3/wDzy/8AH4//AIugDV0XRru0u0lmj2ou7J3IeqkDgMT1PpTEzuqQwoAKACgAoAKACgCC6gF1E8LcB1K564yOv4daQ1oeayW99orkrvQD+NMlG9PY/RhkdwKYhf7d1CX5BITn+6qA/mFzQBsaJpNxLcC8u9wCcjfnezdBweQB1yevGMjJD2EdxSGFABQAUAFABQAUAFABQAUAch4j0iW4YXVuC5C7WUfe4OQw9euCBzwMZ5wth/oc6usahZ/uzI644w6gke3zqTTFsOMmpavhf3kinjgbU/HAVPzoA6yDRJLa3QQymK4jydw5Ri3JVlPBHAGcZ4BwcAU35B6mRe63qdn+7mRIz0DhSc+4JYofy47gdKQbEWl6VPqkwurzcYwQfnzl8dAB2X1PTsO+GtAO/pAFAHOeI/tTQhLZWK5y7L94Y5UAA7sZ5JA4wORSGWtBNw1qHuWLluV3dQvbJxkk9ckk4xVCNmkAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAFABQAUAf/Z</string>
    <string name="SERVERIP">87.107.78.234:60005</string>
    <string name="Kowsar_log">87.107.78.234:60005</string>
    <string name="good_search">جستجوی کالا</string>
    <string name="good_new">جدیدترین ها</string>
    <string name="nav_public">عمومی</string>
    <string name="good_bag">سبد خرید</string>
    <string name="open_prefactor">فاکتورهای باز</string>
    <string name="all_prefactor">همه فاکتورها</string>
    <string name="update">بروزرسانی</string>
    <string name="setting">تنظیمات</string>
    <string name="aboutus">درباره ما</string>
    <string name="aboutus_address">نشانی :میدان توحید خیابان پرچم پلاک 37</string>
    <string name="aboutus_number">تلفن :3—66569320</string>
    <string name="aboutus_email">پست الکترونیک :info@Kits.ir</string>
    <string name="aboutus_downpage">تمامی حقوق این نرم افزار متعلق به گروه نرم افزاری کوثر می باشد</string>
    <string name="buy_total">مبلغ نهایی</string>
    <string name="buy_totalamount">تعداد کل:</string>
    <string name="buy_rows">تعداد ردیف:</string>
    <string name="buy_factorname">فاکتور</string>
    <string name="buy_deletall">حذف سبد</string>
    <string name="buy_tollbarname">سبد خرید</string>
    <string name="buy_sendfactor">نهایی کردن سبد خرید</string>
    <string name="buyhistory_totalprice">مبلغ نهایی</string>
    <string name="buyhistory_totalamount">تعداد کل</string>
    <string name="buyhistory_totalrow">تعداد ردیف</string>
    <string name="config_broker">کد بازاریاب :</string>
    <string name="config_item">تعداد ایتم در ردیف :</string>
    <string name="config_searchitem">تعداد آیتم های ایجاد شده از جستجو :</string>
    <string name="config_off">تغییر درصد فروش :</string>
    <string name="config_real_amount">نمایش موجودی رزرو نشده:</string>
    <string name="config_delay">وقفه برای جستجو کردن:</string>
    <string name="config_totalprice">جمع مبلغ فروش به ریال :</string>
    <string name="customer_toolbarname">مشتریان</string>
    <string name="detail_toolbarname">خصوصیات کالا</string>
    <string name="customerfactorheader">مشتری :</string>
    <string name="detail_buy">افزودن به سبد خرید ️</string>
    <string name="amount">تعداد</string>
    <string name="config_change">تغییر اطلاعات</string>
    <string name="config_returnhome">بازگشت به صفحه اصلی</string>
    <string name="last_1_day">یک روز اخیر</string>
    <string name="last_3_day">سه روز اخیر</string>
    <string name="last_7_day">هفت روز اخیر</string>
    <string name="last_30_day">یک ماه اخیر</string>
    <string name="last_60_day">دو ماه اخیر</string>
    <string name="last_90_day">سه ماه اخیر</string>
    <string name="off_for_sale">درصد تخفیف</string>
    <string name="boxbuy_price">فی</string>
    <string name="boxbuy_maxprice">فی نا خالص</string>
    <string name="boxbuy_total">جمع مبلغ</string>
    <string name="boxbuy_hasamount">تعداد فاکتور شده</string>
</resources>